@@ -352,6 +352,7 @@ AC_CONFIG_FILES([
         examples/book/treeview/drag_and_drop/Makefile
         examples/book/treeview/popup/Makefile
         examples/book/treeview/filter/Makefile
+        examples/book/treeview/filter_modify/Makefile
     examples/calendar/Makefile
     examples/cellrenderercustom/Makefile
     examples/dnd/Makefile
