@@ -1,3 +1,10 @@
+2004-10-31  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/treemodelfilter.ccg: SignalProxy_Modify::gtk_callback():
+	Do not return before actually copying the value.
+	* examples/book/treeview/: Added filter_modify example, to show the 
+	use of set_modify_func().
+
 2004-10-30  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treemodelfilter.[hg|ccg]: Added implementations of 
